refactor: 音频时长解析异步化，转码时解析完整时长